WebCore/rendering/RenderVideo.h
@@ -40,7 +40,6 @@ public:
     RenderVideo(HTMLVideoElement*);
     virtual ~RenderVideo();
 
-    void videoSizeChanged();
     IntRect videoBox() const;
 
     static IntSize defaultSize();
@@ -57,6 +56,9 @@ private:
     inline HTMLVideoElement* videoElement() const;
 
     virtual void intrinsicSizeChanged();
+    IntSize calculateIntrinsicSize();
+    void updateIntrinsicSize();
+
     virtual void imageChanged(WrappedImagePtr, const IntRect*);
 
     virtual const char* renderName() const { return "RenderVideo"; }
@@ -71,7 +73,7 @@ private:
     virtual int calcReplacedWidth(bool includeMaxWidth = true) const;
     virtual int calcReplacedHeight() const;
     virtual int minimumReplacedHeight() const;
-    
+
     int calcAspectRatioWidth() const;
     int calcAspectRatioHeight() const;
 
